[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/UI/GameOverLevel.gd" type="Script" id=1]
[ext_resource path="res://Fonts/RobotoMono 48.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/RobotoMono 96.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/UI/Menu_style.tres" type="StyleBox" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.588235 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0, 0, 0 )

[node name="GameOver" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 1 )

[node name="Overlay" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -216.852
margin_top = -133.107
margin_right = -216.852
margin_bottom = -116.107
rect_scale = Vector2( 1.96963, 2.23445 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
rect_scale = Vector2( 1.3, 1.3 )
custom_styles/panel = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 611.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rows" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 964.0
margin_bottom = 561.0
custom_constants/separation = 100

[node name="WinLoss" type="Label" parent="PanelContainer/MarginContainer/Rows"]
margin_right = 924.0
margin_bottom = 128.0
custom_colors/font_color = Color( 0, 1, 0.0392157, 1 )
custom_fonts/font = ExtResource( 4 )
text = "0"
align = 1

[node name="Row" type="VBoxContainer" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 228.0
margin_right = 924.0
margin_bottom = 521.0
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/Rows/Row"]
margin_right = 924.0
margin_bottom = 293.0

[node name="Rows" type="VBoxContainer" parent="PanelContainer/MarginContainer/Rows/Row/CenterContainer"]
margin_left = 296.0
margin_right = 627.0
margin_bottom = 293.0
custom_constants/separation = 40

[node name="RestartButton" type="Button" parent="PanelContainer/MarginContainer/Rows/Row/CenterContainer/Rows"]
margin_right = 331.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 2 )
text = " Restart "

[node name="MainMenuButton" type="Button" parent="PanelContainer/MarginContainer/Rows/Row/CenterContainer/Rows"]
margin_top = 111.0
margin_right = 331.0
margin_bottom = 182.0
custom_fonts/font = ExtResource( 2 )
text = " Main Menu "

[node name="Quit Button" type="Button" parent="PanelContainer/MarginContainer/Rows/Row/CenterContainer/Rows"]
margin_top = 222.0
margin_right = 331.0
margin_bottom = 293.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"

[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/Row/CenterContainer/Rows/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/Row/CenterContainer/Rows/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/Row/CenterContainer/Rows/Quit Button" to="." method="_on_Quit_Button_pressed"]
